fix(SHS-6416): vertical linked card title color contrast in private collection warbler

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/preview/_preview.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/preview/_preview.scss
@@ -138,7 +138,7 @@
     font-weight: 400;
   }
 
-  .hb-vertical-linked-card {
+  .hb-vertical-linked-card__title__link.ext {
     --link-base-current-color: var(--palette--white);
     --link-base-hover-current-color: var(--palette--white);
   }
